--- a/catzapp/index.html
+++ b/catzapp/index.html
@@ -15,11 +15,20 @@
               <h1 id="h1">Pet API 🐱</h1>
               <form>
                   <label class="c-form-label">Name: </label><br>
-                  <input type="text" id="name" class="c-form-input" name="name" /><br>
-                  <input onclick="y1k3s()" id="submit" class="c-btn c-btn--primary" value="Find a pet" type="button" />
+                  <input type="text" id="name1" class="c-form-input" name="name1" /><br>
+                  <label class="c-form-label">Name: </label><br>
+                  <input type="text" id="name2" class="c-form-input" name="name2" /><br>
+                  <label class="c-form-label">Name: </label><br>
+                  <input type="text" id="name3" class="c-form-input" name="name3" /><br>
+                  <label class="c-form-label">Name: </label><br>
+                  <input type="text" id="name4" class="c-form-input" name="name4" /><br>
+                  <input onclick="y1k3s()" id="submit" class="c-btn c-btn--primary" value="Find and name some pets" type="button" />
               </form>
               <div id="output" class="h-mb-4"></div>
-              <img id="image" src="cat.png" />
+                <img id="image1" src="cat.png" alt="Red dot" />
+          <img id="image2" src="cat.png" alt="Red dot" />
+          <img id="image3" src="cat.png" alt="Red dot" />
+          <img id="image4" src="cat.png" alt="Red dot" />
           </div>
         </div>
         <p style="text-align: center;">Bitprj © 2021</p>
